fix pause function

--- a/net/DSSnet/configs/IED.config
+++ b/net/DSSnet/configs/IED.config
@@ -1,1 +1,2 @@
 h1 split test split 5.5.5.5 split python ./models/testModelNoBlocking.py h1 &
+h2 split test split 5.5.5.6 split python ./models/testModelBlocking.py h2 &
