--- a/net/DSSnet/configs/IED.config
+++ b/net/DSSnet/configs/IED.config
@@ -1,2 +1,2 @@
 h1 split test split 5.5.5.5 split sudo python3.4 ./models/pmu.py h1 &
-h2 split test split 5.5.5.6 split sudo python echo ./models/testModelBlocking.py h2 &
+h2 split test split 5.5.5.6 split sudo python ./models/testModelBlocking.py h2 &
