added test models

--- a/net/DSSnet/configs/IED.config
+++ b/net/DSSnet/configs/IED.config
@@ -1,2 +1,6 @@
-h1 split test split 5.5.5.5 split sudo python3.4 ./models/pmu.py h1 &
-h2 split test split 5.5.5.6 split sudo python ./models/testModelBlocking.py h2 &
+ltest1 split test split 5.5.5.5 split sudo python ./models/test/load.py ltest1 &
+gtest1 split test split 5.5.5.6 split sudo python ./models/test/gen.py gtest1 &
+estest split test split 5.5.5.7 split sudo python ./models/test/es.py estest &
+mtest1 split test split 5.5.5.8 split sudo python ./models/test/mon0.py mtest1 &
+mtest2 split test split 5.5.5.9 split sudo python ./models/test/mon1.py mtest2 &
+f1 split test split 5.5.5.10 split sudo python ./models/test/fault.py f1 &
