--- a/net/DSSnet/configs/topo.config
+++ b/net/DSSnet/configs/topo.config
@@ -1,6 +1,19 @@
-#
+# example file
 new s1
 new s2
-s1 s2  (bw=10mb)
-s1 h1 (bw=10mb)
-s2 h2 (bw=10mb)
+new s3 
+new s4
+new s5
+new s6
+s1 s2     (bw=10mb)
+s2 s3     (bw=10mb)
+s3 s4     (bw=10mb)
+s4 s5     (bw=10mb)
+s5 s6     (bw=10mb) 
+s1 ltest1 (bw=10mb)
+s2 gtest1 (bw=10mb)
+s3 estest (bw=10mb)
+s4 mtest1 (bw=10mb)
+s5 mtest2 (bw=10mb)
+s5 f1     (bw=10mb)
+#
